# mine-expenditure-extractor

./: README.md
mine_expenditure_extractor/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run.py  settings.py
mine_expenditure_extractor/mine_extractor/: llm_client.py  logging_config.py
mine_expenditure_extractor/mine_extractor/extraction/: cost_extractor.py  mine_detector.py  prompts.py  schemas.py
mine_expenditure_extractor/mine_extractor/indexing/: chunker.py  embedder.py  vector_index.py
mine_expenditure_extractor/mine_extractor/parsing/: page_classifier.py  pdf_to_markdown.py  table_enhancer.py
mine_expenditure_extractor/mine_extractor/pipeline/: extract_pipeline.py  ingest_pipeline.py
mine_expenditure_extractor/mine_extractor/retrieval/: reranker.py  searcher.py
